--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 								<li>5. <a target="_blank" href="https://nakashimmer.github.io/showcase/css3/animation/sakkaku/index.html">錯覚</a>
 								<li>6. <a target="_blank" href="https://nakashimmer.github.io/showcase/css3/animation/momiji/index.html">もみじ</a>
 								<li>7. <a target="_blank" href="https://nakashimmer.github.io/showcase/css3/animation/soccer/index.html">サッカーボール</a>
-								<li>8. <a target="_blank" href="https://tokyoappwork.shop/showcase/css3/animation/CSSSanta/index.html">CSSサンタ</a>
+								<li>8. <a target="_blank" href="https://nakashimmer.github.io/showcase/css3/animation/CSSSanta/index.html">CSSサンタ</a>
 								<li>9. <a target="_blank" href="https://nakashimmer.github.io/showcase/css3/animation/carp/index.html">鯉のぼり</a>
-								<li>10. <a target="_blank" href="https://tokyoappwork.shop/showcase/css3/animation/3d/domino/index.html">3D①</a>
+								<li>10. <a target="_blank" href="https://nakashimmer.github.io/showcase/css3/animation/3d/domino/index.html">3D①</a>
 								<li>11. <a target="_blank" href="https://nakashimmer.github.io/showcase/css3/animation/3d/cube/index.html">3D②</a>
 								<li>12. <a target="_blank" href="https://nakashimmer.github.io/showcase/JS/dom/css/index3.html">3Dコントロール</a>
 							</ol>
