--- a/sample/8/8-1.html
+++ b/sample/8/8-1.html
@@ -4,18 +4,18 @@
 	<head>
 		<meta charset="utf-8">
 		<title>8-1</title>
-			<style>
-		*{margin:0px;padding:0px;}
-		#box1{
-			position:absolute;
-			top:0px;right:0px;bottom:0px;left:0px;
-			margin:auto;
-			margin:50px auto;font-size:20px;
-			width:200px;height:200px;line-height:200px;
-			text-align:center;border:1px solid gray;
-		}
-		#box1{transition:all 1s linear;}
-	</style
+		<style>
+			*{margin:0px;padding:0px;}
+			#box1{
+				position:absolute;
+				top:0px;right:0px;bottom:0px;left:0px;
+				margin:auto;
+				margin:50px auto;font-size:20px;
+				width:200px;height:200px;line-height:200px;
+				text-align:center;border:1px solid gray;
+			}
+			#box1{transition:all 1s linear;}
+		</style>
 	</head>
 
 	<body>
