--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 				background-color: black;
 			}
 
+			#outer {
+				height: calc(100vh - 100px - 60px);
+				overflow: scroll;
+			}
+
 			#wrap {
 				margin: 0px auto;
 				padding: 5px;
@@ -66,7 +71,7 @@
 				margin-top: 1em;
 			}
 
-			section>section{
+			section>section {
 				margin: 0.5em;
 				border: 1px solid gray;
 				padding: 0.5em;
@@ -101,14 +106,17 @@
 			footer p small a {
 				color: #fff;
 				font-size: 1rem;
-				line-height: 2em;
+				line-height: 50px;
 				color: white !important;
 			}
-	
 
 			@media(max-width:600px) {
 				.flex {
 					display: block;
+				}
+
+				#outer {
+					height: auto;
 				}
 			}
 		</style>
@@ -117,162 +125,165 @@
 		<header>
 			<h1>「Webアニメーション実習」授業ページ</h1>
 		</header>
-		<div id=wrap>
-			<main>
-				<section>
-					<h1>演習環境</h1>
+		<div id="outer">
+			<div id="wrap">
+				<main>
 					<section>
-						<ol class="no">
-							<li><a href="https://note.com/_nakashimmer_/n/n8a5563d15fea">Visual Studio Code</a></li>
-							<li><a href="https://www.google.com/intl/ja_jp/chrome/">Google Chrome</a></li>
-						</ol>
+						<h1>演習環境</h1>
+						<section>
+							<ol class="no">
+								<li><a href="https://note.com/_nakashimmer_/n/n8a5563d15fea">Visual Studio Code</a></li>
+								<li><a href="https://www.google.com/intl/ja_jp/chrome/">Google Chrome</a></li>
+							</ol>
+						</section>
 					</section>
-				</section>
-				<section>
-					<div class="flex">
-						<section>
-							<h1>1. 触れてみよう</h1>
+					<section>
+						<div class="flex">
 							<section>
-								<ol class="no">
-									<li><a target="_blank"
-											href="https://nakashimmer.github.io/teacherColumn2021/cssSim/index.html">CSSシミュレーション</a></li>
-									<li><a target="_blank" href="https://nakashimmer.github.io/showcase/css3/rich/index.html">リッチなCSS</a>
-									</li>
-									<li><a target="_blank" href="http://www.css-spinners.com/#/spinners/">スピナー</a></li>
-									<li><a target="_blank"
-											href="https://lab.sonicmoov.com/markup/css/css-animation-20/">使えるCSSアニメーション20選</a></li>
-									<li><a target="_blank"
-											href="https://nakashimmer.github.io/showcase/css3/animation/tictac/index.html">メトロノーム</a></li>
-									<li><a target="_blank"
-											href="https://nakashimmer.github.io/showcase/css3/animation/carousel/index.html">カルーセル</a></li>
-									<li><a target="_blank"
-											href="https://nakashimmer.github.io/showcase/css3/animation/sakkaku/index.html">錯覚</a></li>
-									<li><a target="_blank"
-											href="https://nakashimmer.github.io/showcase/css3/animation/momiji/index.html">もみじ</a></li>
-									<li><a target="_blank"
-											href="https://nakashimmer.github.io/showcase/css3/animation/soccer/index.html">サッカーボール</a></li>
-									<li><a target="_blank"
-											href="https://nakashimmer.github.io/showcase/css3/animation/CSSSanta/index.html">CSSサンタ</a></li>
-									<li><a target="_blank"
-											href="https://nakashimmer.github.io/showcase/css3/animation/carp/index.html">鯉のぼり</a></li>
-									<li><a target="_blank"
-											href="https://nakashimmer.github.io/showcase/css3/animation/3d/domino/index.html">3D①</a></li>
-									<li><a target="_blank"
-											href="https://nakashimmer.github.io/showcase/css3/animation/3d/cube/index.html">3D②</a></li>
-									<li><a target="_blank"
-											href="https://nakashimmer.github.io/showcase/JS/dom/css/index3.html">3Dコントロール</a></li>
-									<li><a href="https://webdesignfacts.net/entry/css-background-animation/#gsc.tab=0">動く背景</a></li>
-								</ol>
+								<h1>1. 触れてみよう</h1>
+								<section>
+									<ol class="no">
+										<li><a target="_blank"
+												href="https://nakashimmer.github.io/teacherColumn2021/cssSim/index.html">CSSシミュレーション</a></li>
+										<li><a target="_blank"
+												href="https://nakashimmer.github.io/showcase/css3/rich/index.html">リッチなCSS</a>
+										</li>
+										<li><a target="_blank" href="http://www.css-spinners.com/#/spinners/">スピナー</a></li>
+										<li><a target="_blank"
+												href="https://lab.sonicmoov.com/markup/css/css-animation-20/">使えるCSSアニメーション20選</a></li>
+										<li><a target="_blank"
+												href="https://nakashimmer.github.io/showcase/css3/animation/tictac/index.html">メトロノーム</a></li>
+										<li><a target="_blank"
+												href="https://nakashimmer.github.io/showcase/css3/animation/carousel/index.html">カルーセル</a></li>
+										<li><a target="_blank"
+												href="https://nakashimmer.github.io/showcase/css3/animation/sakkaku/index.html">錯覚</a></li>
+										<li><a target="_blank"
+												href="https://nakashimmer.github.io/showcase/css3/animation/momiji/index.html">もみじ</a></li>
+										<li><a target="_blank"
+												href="https://nakashimmer.github.io/showcase/css3/animation/soccer/index.html">サッカーボール</a></li>
+										<li><a target="_blank"
+												href="https://nakashimmer.github.io/showcase/css3/animation/CSSSanta/index.html">CSSサンタ</a></li>
+										<li><a target="_blank"
+												href="https://nakashimmer.github.io/showcase/css3/animation/carp/index.html">鯉のぼり</a></li>
+										<li><a target="_blank"
+												href="https://nakashimmer.github.io/showcase/css3/animation/3d/domino/index.html">3D①</a></li>
+										<li><a target="_blank"
+												href="https://nakashimmer.github.io/showcase/css3/animation/3d/cube/index.html">3D②</a></li>
+										<li><a target="_blank"
+												href="https://nakashimmer.github.io/showcase/JS/dom/css/index3.html">3Dコントロール</a></li>
+										<li><a href="https://webdesignfacts.net/entry/css-background-animation/#gsc.tab=0">動く背景</a></li>
+									</ol>
+								</section>
 							</section>
-						</section>
-						<section>
-							<h1>2. 事前知識</h1>
 							<section>
-								<ol>
-									<li><a href="sample/2/2-1.html">2.1. HTMLの基本</a>
-									<li><a href="sample/2/2-2.html">2.2. CSSの基本</a>
-									<li><a href="sample/2/2-3.html">2.2. セレクタ</a>
-								</ol>
+								<h1>2. 事前知識</h1>
+								<section>
+									<ol>
+										<li><a href="sample/2/2-1.html">2.1. HTMLの基本</a>
+										<li><a href="sample/2/2-2.html">2.2. CSSの基本</a>
+										<li><a href="sample/2/2-3.html">2.2. セレクタ</a>
+									</ol>
+								</section>
 							</section>
-						</section>
-						<section>
-							<h1>3. いろいろなCSS</h1>
 							<section>
-								<ol>
-									<li><a href="sample/3/3-1.html">3.1. ボックスモデル</a>
-									<li><a href="sample/3/3-2.html">3.2. 上下中央寄せ</a>
-									<li><a href="sample/3/3-3-1.html">3.3.1. 角丸</a>
-									<li><a href="sample/3/3-3-2.html">3.3.2. 影</a>
-									<li><a href="sample/3/3-3-3.html">3.3.3. 花の模様</a>
-									<li><a href="sample/3/3-3-4.html">3.3.4. グラデーション</a>
-									<li><a href="sample/3/3-3-5.html">3.3.5. 三角形</a>
-									<li><a href="sample/3/3-4-1.html">3.4.1. 背景画像</a>
-									<li><a href="sample/3/3-4-2.html">3.4.2. 背景画像に影</a>
-								</ol>
+								<h1>3. いろいろなCSS</h1>
+								<section>
+									<ol>
+										<li><a href="sample/3/3-1.html">3.1. ボックスモデル</a>
+										<li><a href="sample/3/3-2.html">3.2. 上下中央寄せ</a>
+										<li><a href="sample/3/3-3-1.html">3.3.1. 角丸</a>
+										<li><a href="sample/3/3-3-2.html">3.3.2. 影</a>
+										<li><a href="sample/3/3-3-3.html">3.3.3. 花の模様</a>
+										<li><a href="sample/3/3-3-4.html">3.3.4. グラデーション</a>
+										<li><a href="sample/3/3-3-5.html">3.3.5. 三角形</a>
+										<li><a href="sample/3/3-4-1.html">3.4.1. 背景画像</a>
+										<li><a href="sample/3/3-4-2.html">3.4.2. 背景画像に影</a>
+									</ol>
+								</section>
 							</section>
-						</section>
-					</div>
-					<div class="flex">
-						<section>
-							<h1>4. 変形</h1>
+						</div>
+						<div class="flex">
 							<section>
-								<ol>
-									<li><a href="sample/4/4-1.html">4.1 回転</a>
-									<li><a href="sample/4/4-2.html">4.2 伸縮</a>
-									<li><a href="sample/4/4-3.html">4.3 歪み</a>
-									<li><a href="sample/4/4-4.html">4.4 移動</a>
-									<li><a href="sample/4/4-5.html">4.5 合成</a>
-								</ol>
+								<h1>4. 変形</h1>
+								<section>
+									<ol>
+										<li><a href="sample/4/4-1.html">4.1 回転</a>
+										<li><a href="sample/4/4-2.html">4.2 伸縮</a>
+										<li><a href="sample/4/4-3.html">4.3 歪み</a>
+										<li><a href="sample/4/4-4.html">4.4 移動</a>
+										<li><a href="sample/4/4-5.html">4.5 合成</a>
+									</ol>
+								</section>
 							</section>
-						</section>
-						<section>
-							<h1>5. 遷移</h1>
 							<section>
-								<ol>
-									<li><a href="sample/5/5-1.html">5.1. CSS+トランジション</a>
-									<li><a href="sample/5/5-2.html">5.2. 変形+トランジション</a>
-								</ol>
+								<h1>5. 遷移</h1>
+								<section>
+									<ol>
+										<li><a href="sample/5/5-1.html">5.1. CSS+トランジション</a>
+										<li><a href="sample/5/5-2.html">5.2. 変形+トランジション</a>
+									</ol>
+								</section>
 							</section>
-						</section>
-					</div>
-					<div class="flex">
-						<section>
-							<h1>6. アニメーション</h1>
+						</div>
+						<div class="flex">
 							<section>
-								<ol>
-									<li><a href="sample/6/6-1.html">6.1. 基本的な記述</a>
-									<li><a href="sample/6/6-2.html">6.2. スピナー</a>
-									<li><a href="sample/6/6-3.html">6.3. カルーセル</a>
-									<li><a href="sample/6/6-4.html">6.4. 鼓動</a>
-								</ol>
+								<h1>6. アニメーション</h1>
+								<section>
+									<ol>
+										<li><a href="sample/6/6-1.html">6.1. 基本的な記述</a>
+										<li><a href="sample/6/6-2.html">6.2. スピナー</a>
+										<li><a href="sample/6/6-3.html">6.3. カルーセル</a>
+										<li><a href="sample/6/6-4.html">6.4. 鼓動</a>
+									</ol>
+								</section>
 							</section>
-						</section>
-						<section>
-							<h1>7. 三次元</h1>
 							<section>
-								<ol>
-									<li><a href="sample/7/7-1.html">7.1. 回転の三次元</a>
-									<li><a href="sample/7/7-2-1.html">7.2.1 回転の三次元アニメーション</a>
-									<li><a href="sample/7/7-2-2.html">7.2.2 伸縮の三次元アニメーション</a>
-									<li><a href="sample/7/7-2-3.html">7.2.3 移動の三次元アニメーション</a>
-								</ol>
+								<h1>7. 三次元</h1>
+								<section>
+									<ol>
+										<li><a href="sample/7/7-1.html">7.1. 回転の三次元</a>
+										<li><a href="sample/7/7-2-1.html">7.2.1 回転の三次元アニメーション</a>
+										<li><a href="sample/7/7-2-2.html">7.2.2 伸縮の三次元アニメーション</a>
+										<li><a href="sample/7/7-2-3.html">7.2.3 移動の三次元アニメーション</a>
+									</ol>
+								</section>
 							</section>
-						</section>
-					</div>
-					<div class="flex">
-						<section>
-							<h1>8.JavaScript連携</h1>
+						</div>
+						<div class="flex">
 							<section>
-								<ol>
-									<li><a href="sample/8/8-1.html">8.1. JS連携</a>
-								</ol>
+								<h1>8.JavaScript連携</h1>
+								<section>
+									<ol>
+										<li><a href="sample/8/8-1.html">8.1. JS連携</a>
+									</ol>
+								</section>
 							</section>
-						</section>
-						<section>
-							<h1>9.参考</h1>
 							<section>
-								<h2>サンプルページ</h2>
-								<ol>
-									<li><a target=_blank href="https://nakashimmer.github.io/showcase/">HTML5 Showcase</a></li>
-								</ol>
-								<h2>検証ツール</h2>
-								<ol>
-									<li><a target=_blank href="https://validator.w3.org/">W3C HTML検証</a></li>
-									<li><a target=_blank href="https://jigsaw.w3.org/css-validator/validator.html.ja">W3C CSS検証</a></li>
-								</ol>
-								<h2>更に学びを深める</h2>
-								<ol>
-									<li><a href="https://www.amazon.co.jp/dp/4802096607/">📚なかしまぁ先生のHTML5教室 amazon</a></li>
-									</li>
-									<li><a target=_blank
-											href="https://www.street-academy.com/steachers/1274?conversion_name=direct_message&tracking_code=f3037c532c76e32eb5636350d0147bc9">一日まるごとどっぷりHTML5教室(リアル教室)</a>
-									</li>
-								</ol>
+								<h1>9.参考</h1>
+								<section>
+									<h2>サンプルページ</h2>
+									<ol>
+										<li><a target=_blank href="https://nakashimmer.github.io/showcase/">HTML5 Showcase</a></li>
+									</ol>
+									<h2>検証ツール</h2>
+									<ol>
+										<li><a target=_blank href="https://validator.w3.org/">W3C HTML検証</a></li>
+										<li><a target=_blank href="https://jigsaw.w3.org/css-validator/validator.html.ja">W3C CSS検証</a></li>
+									</ol>
+									<h2>更に学びを深める</h2>
+									<ol>
+										<li><a href="https://www.amazon.co.jp/dp/4802096607/">📚なかしまぁ先生のHTML5教室 amazon</a></li>
+										</li>
+										<li><a target=_blank
+												href="https://www.street-academy.com/steachers/1274?conversion_name=direct_message&tracking_code=f3037c532c76e32eb5636350d0147bc9">一日まるごとどっぷりHTML5教室(リアル教室)</a>
+										</li>
+									</ol>
+								</section>
 							</section>
-						</section>
-					</div>
-				</section>
-			</main>
+						</div>
+					</section>
+				</main>
+			</div>
 		</div>
 		<footer>
 			<p><small>(C) <a>秋草学園大学</a>・<a href="https://www.facebook.com/NakashimaShunji/">中島俊治</a></small></p>
