--- a/sample/5/5-2-start.html
+++ b/sample/5/5-2-start.html
@@ -6,12 +6,10 @@
 		<title>5-2</title>
 		<style>
 			.box{
+				margin:50px auto;
 				width:200px; height:200px;
 				line-height:200px; text-align:center;
 				border:1px solid gray;
-				position:absolute;
-				top:0px;right:0px;bottom:0px;left:0px;
-				margin:auto;
 			}
 			#box1,#box2,#box3,#box4{
 
