--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
 									</ol>
 									<h2>検証ツール</h2>
 									<ol>
+										<li><a target=_blank href="https://note.com/_nakashimmer_/n/ncb49a09c8211">作ったHTML5がうまく動作しない時どうするか？</a></li>
 										<li><a target=_blank href="https://validator.w3.org/">W3C HTML検証</a></li>
 										<li><a target=_blank href="https://jigsaw.w3.org/css-validator/validator.html.ja">W3C CSS検証</a></li>
 									</ol>
