--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 									<ol>
 										<li><a target=_blank href="https://nakashimmer.github.io/showcase/">HTML5 Showcase</a></li>
 									</ol>
-									<h2>検証ツール</h2>
+									<h2>うまく行かないとき</h2>
 									<ol>
 										<li><a target=_blank href="https://note.com/_nakashimmer_/n/ncb49a09c8211">作ったHTML5がうまく動作しない時どうするか？</a></li>
 										<li><a target=_blank href="https://validator.w3.org/">W3C HTML検証</a></li>
