--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html">
 <html>
 <head>
+	<!-- Google Analytics -->
+	<script src="/showcase/ga.js"></script>
 	<meta charset=utf-8>
 	<title>授業ページ|Webアニメーション実習</title>
 
