--- a/sample/3/3-2.html
+++ b/sample/3/3-2.html
@@ -7,7 +7,7 @@
 		<style>
 			*{margin:0px;padding:0px;}				/*リセットCSS*/
 
-			.box{
+			div{
 				border:1px solid gray; 					/*枠線*/
 				width:200px;									/*コンテンツ横幅*/
 				height:200px; 								/*コンテンツ高さ*/
@@ -28,7 +28,7 @@
 	</head>
 
 	<body>
-		<div class="box" id="box1">Box1</div>
+		<div id="box1">Box1</div>
 	</body>
 
 </html>
