--- a/sample/5/5-2.html
+++ b/sample/5/5-2.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<title>5-2</title>
 		<style>
-			.box{
+			div{
 				margin:50px auto;
 				width:200px; height:200px;
 				line-height:200px; text-align:center;
@@ -24,10 +24,10 @@
 	</head>
 
 	<body>
-		<div class="box" id="box1">回転</div>
-		<div class="box" id="box2">伸縮</div>
-		<div class="box" id="box3">歪み</div>
-		<div class="box" id="box4">移動</div>
+		<div id="box1">回転</div>
+		<div id="box2">伸縮</div>
+		<div id="box3">歪み</div>
+		<div id="box4">移動</div>
 	</body>
 
 </html>
