--- a/sample/8/8-1.html
+++ b/sample/8/8-1.html
@@ -6,7 +6,7 @@
 		<title>8-1</title>
 		<style>
 			*{margin:0px;padding:0px;}
-			#box1{
+			div{
 				position:absolute;
 				top:0px;right:0px;bottom:0px;left:0px;
 				margin:auto;
