--- a/sample/3/3-1-start.html
+++ b/sample/3/3-1-start.html
@@ -6,7 +6,7 @@
 		<title>3-1</title>
 		<style>
 			*{margin:0px;padding:0px;}				/*リセットCSS*/
-			.box1{
+			div{
 
 			}
 			#box1{
@@ -16,7 +16,7 @@
 	</head>
 
 	<body>
-		<div class="box" id="box1">Box1</div>
+		<div id="box1">Box1</div>
 	</body>
 
 </html>
