--- a/sample/5/5-1.html
+++ b/sample/5/5-1.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<title>5-1</title>
 		<style>
-			.box{
+			div{
 				position:absolute;
 				top:0px;right:0px;bottom:0px;left:0px;
 				margin:auto;
