--- a/sample/6/6-4.html
+++ b/sample/6/6-4.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<title>6-4</title>
 		<style>
-			.box{
+			div{
 				position:absolute;
 				top:0px;right:0px;bottom:0px;left:0px;
 				margin:auto;
@@ -29,7 +29,7 @@
 	</head>
 
 	<body>
-		<div class="box" id="box1">💓</div>
+		<div id="box1">💓</div>
 	</body>
 
 </html>
