--- a/sample/7/7-1-start.html
+++ b/sample/7/7-1-start.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<title>7-1</title>
 		<style>
-			.box{
+			div{
 				border:1px solid gray;
 				width:100px; height:100px;
 			}
