--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			}
 
 			a::after {
-				content: " 🍁";
+				content: " 🌕";
 			}
 
 			header {
@@ -133,150 +133,155 @@
 						<section>
 							<ol class="no">
 								<li><a href="https://note.com/_nakashimmer_/n/n8a5563d15fea">Visual Studio Code</a></li>
+								</li>
 								<li><a href="https://www.google.com/intl/ja_jp/chrome/">Google Chrome</a></li>
+								</li>
 							</ol>
 						</section>
 					</section>
 					<section>
 						<div class="flex">
 							<section>
-								<h1>1. 触れてみよう</h1>
+								<h1>0. 触れてみよう</h1>
 								<section>
 									<ol class="no">
 										<li><a target="_blank"
 												href="https://nakashimmer.github.io/teacherColumn2021/cssSim/index.html">CSSシミュレーション</a></li>
+										</li>
 										<li><a target="_blank"
-												href="https://nakashimmer.github.io/showcase/css3/rich/index.html">リッチなCSS</a>
+												href="https://nakashimmer.github.io/showcase/css3/rich/index.html">リッチなCSS</a></li>
 										</li>
 										<li><a target="_blank" href="http://www.css-spinners.com/#/spinners/">スピナー</a></li>
+										</li>
 										<li><a target="_blank"
 												href="https://lab.sonicmoov.com/markup/css/css-animation-20/">使えるCSSアニメーション20選</a></li>
+										</li>
 										<li><a target="_blank"
 												href="https://nakashimmer.github.io/showcase/css3/animation/tictac/index.html">メトロノーム</a></li>
+										</li>
 										<li><a target="_blank"
 												href="https://nakashimmer.github.io/showcase/css3/animation/carousel/index.html">カルーセル</a></li>
+										</li>
 										<li><a target="_blank"
 												href="https://nakashimmer.github.io/showcase/css3/animation/sakkaku/index.html">錯覚</a></li>
+										</li>
 										<li><a target="_blank"
 												href="https://nakashimmer.github.io/showcase/css3/animation/momiji/index.html">もみじ</a></li>
+										</li>
 										<li><a target="_blank"
 												href="https://nakashimmer.github.io/showcase/css3/animation/soccer/index.html">サッカーボール</a></li>
+										</li>
 										<li><a target="_blank"
 												href="https://nakashimmer.github.io/showcase/css3/animation/CSSSanta/index.html">CSSサンタ</a></li>
+										</li>
 										<li><a target="_blank"
 												href="https://nakashimmer.github.io/showcase/css3/animation/carp/index.html">鯉のぼり</a></li>
+										</li>
 										<li><a target="_blank"
 												href="https://nakashimmer.github.io/showcase/css3/animation/3d/domino/index.html">3D①</a></li>
+										</li>
 										<li><a target="_blank"
 												href="https://nakashimmer.github.io/showcase/css3/animation/3d/cube/index.html">3D②</a></li>
+										</li>
 										<li><a target="_blank"
 												href="https://nakashimmer.github.io/showcase/JS/dom/css/index3.html">3Dコントロール</a></li>
+										</li>
 										<li><a href="https://webdesignfacts.net/entry/css-background-animation/#gsc.tab=0">動く背景</a></li>
+										</li>
 									</ol>
 								</section>
 							</section>
 							<section>
-								<h1>2. 事前知識</h1>
+								<h1>1. 事前知識</h1>
 								<section>
 									<ol>
-										<li><a href="sample/2/2-1.html">2.1. HTMLの基本</a>
-										<li><a href="sample/2/2-2.html">2.2. CSSの基本</a>
-										<li><a href="sample/2/2-3.html">2.2. セレクタ</a>
+										<li><a href="sample/1/2-1.html">2.1. HTMLの基本</a></li>
+										<li><a href="sample/1/2-2.html">2.2. CSSの基本</a></li>
+										<li><a href="sample/1/2-3.html">2.3. セレクタ</a></li>
+										<li><a href="sample/1/2-4.html">2.4. ボックスモデル</a></li>
 									</ol>
 								</section>
 							</section>
 							<section>
-								<h1>3. いろいろなCSS</h1>
+								<h1>2. トランジション</h1>
 								<section>
 									<ol>
-										<li><a href="sample/3/3-1.html">3.1. ボックスモデル</a>
-										<li><a href="sample/3/3-2.html">3.2. 上下中央寄せ</a>
-										<li><a href="sample/3/3-3-1.html">3.3.1. 角丸</a>
-										<li><a href="sample/3/3-3-2.html">3.3.2. 影</a>
-										<li><a href="sample/3/3-3-3.html">3.3.3. 花の模様</a>
-										<li><a href="sample/3/3-3-4.html">3.3.4. グラデーション</a>
-										<li><a href="sample/3/3-3-5.html">3.3.5. 三角形</a>
-										<li><a href="sample/3/3-4-1.html">3.4.1. 背景画像</a>
-										<li><a href="sample/3/3-4-2.html">3.4.2. 背景画像に影</a>
-									</ol>
-								</section>
-							</section>
-						</div>
-						<div class="flex">
-							<section>
-								<h1>4. 変形</h1>
-								<section>
-									<ol>
-										<li><a href="sample/4/4-1.html">4.1 回転</a>
-										<li><a href="sample/4/4-2.html">4.2 伸縮</a>
-										<li><a href="sample/4/4-3.html">4.3 歪み</a>
-										<li><a href="sample/4/4-4.html">4.4 移動</a>
-										<li><a href="sample/4/4-5.html">4.5 合成</a>
-									</ol>
-								</section>
-							</section>
-							<section>
-								<h1>5. 遷移</h1>
-								<section>
-									<ol>
-										<li><a href="sample/5/5-1.html">5.1. CSS+トランジション</a>
-										<li><a href="sample/5/5-2.html">5.2. 変形+トランジション</a>
+										<li><a href="sample/2/1-1.html">1.1. 文字の色をトランジションする</a></li>
+										<li><a href="sample/2/1-2.html">1.2. 複数のプロパティを同じ遷移時間でトランジションする</a></li>
+										<li><a href="sample/2/1-3.html">1.3. 複数のプロパティを別の遷移時間でトランジションする</a></li>
+										<li><a href="sample/2/2-1.html">2.1. 縦横</a></li>
+										<li><a href="sample/2/2-2.html">2.2. 文字の大きさ</a></li>
+										<li><a href="sample/2/2-3.html">2.3. 角丸</a></li>
+										<li><a href="sample/2/2-4.html">2.4. 影</a></li>
+										<li><a href="sample/2/2-5.html">2.5. 画像加工</a></li>
+										<li><a href="sample/2/2-5-1.html">2.5.1. 影</a></li>
+										<li><a href="sample/2/2-5-2.html">2.5.2. 明るさ</a></li>
+										<li><a href="sample/2/2-5-3.html">2.5.3. コントラスト</a></li>
+										<li><a href="sample/2/2-5-4.html">2.5.4. グレースケール</a></li>
+										<li><a href="sample/2/2-5-5.html">2.5.5. 彩度</a></li>
+										<li><a href="sample/2/2-5-6.html">2.5.6. セピア</a></li>
+										<li><a href="sample/2/2-5-7.html">2.5.7. 色相回転</a></li>
+										<li><a href="sample/2/2-5-8.html">2.5.8. 反転</a></li>
+										<li><a href="sample/2/2-5-9.html">2.5.9. ぼかし</a></li>
+										<li><a href="sample/2/2-5-10.html">2.5.10. 不透明度</a></li>
 									</ol>
 								</section>
 							</section>
 						</div>
 						<div class="flex">
 							<section>
-								<h1>6. アニメーション</h1>
+								<h1>3. アニメーション</h1>
 								<section>
 									<ol>
-										<li><a href="sample/6/6-1.html">6.1. 基本的な記述</a>
-										<li><a href="sample/6/6-2.html">6.2. スピナー</a>
-										<li><a href="sample/6/6-3.html">6.3. カルーセル</a>
-										<li><a href="sample/6/6-4.html">6.4. 鼓動</a>
+										<li><a href="sample/3/1.html">1 アニメーション</a></li>
+										<li><a href="sample/3/2-1.html">2.1 上下真ん中揃え</a></li>
+										<li><a href="sample/3/2-2.html">2.2 回転</a></li>
+										<li><a href="sample/3/2-3.html">2.3 移動</a></li>
+										<li><a href="sample/3/2-4.html">2.4 伸縮</a></li>
+										<li><a href="sample/3/2-5.html">2.5 複数の変形</a></li>
+										<li><a href="sample/3/2-6.html">2.6 複数の要素</a></li>
+										<li><a href="sample/3/2-7.html">2.7 複数のアニメーション</a></li>
+										<li><a href="sample/3/3.html">3 三次元</a></li>
+										<li><a href="sample/3/2-1.html">3.1 三次元の回転</a></li>
+										<li><a href="sample/3/3-1-rotate.html">3.1三次元の回転(複雑) </a></li>
+										<li><a href="sample/3/3-2.html">3.2 三次元の移動</a></li>
+										<li><a href="sample/3/3-3.html">3.3 三次元の伸縮</a></li>
+										<li><a href="sample/3/4-1.html">4.1 グラデーションの移動</a></li>
 									</ol>
 								</section>
 							</section>
 							<section>
-								<h1>7. 三次元</h1>
+								<h1>4. JavaScript連携</h1>
 								<section>
 									<ol>
-										<li><a href="sample/7/7-1.html">7.1. 回転の三次元</a>
-										<li><a href="sample/7/7-2-1.html">7.2.1 回転の三次元アニメーション</a>
-										<li><a href="sample/7/7-2-2.html">7.2.2 伸縮の三次元アニメーション</a>
-										<li><a href="sample/7/7-2-3.html">7.2.3 移動の三次元アニメーション</a>
-									</ol>
-								</section>
-							</section>
-						</div>
-						<div class="flex">
-							<section>
-								<h1>8.JavaScript連携</h1>
-								<section>
-									<ol>
-										<li><a href="sample/8/8-1.html">8.1. JS連携</a>
+										<li><a href="sample/4/1-2.html">1.2. 準備コード</a></li>
+										<li><a href="sample/4/1-3.html">1.3. CSSの操作</a></li>
+										<li><a href="sample/4/1-4.html">1.4. ハイフンを含んだCSSの操作</a></li>
+										<li><a href="sample/4/1-5.html">1.5. 変形のCSSの操作</a></li>
 									</ol>
 								</section>
 							</section>
 							<section>
-								<h1>9.参考</h1>
+								<h1>5.参考</h1>
 								<section>
-									<h2>サンプルページ</h2>
-									<ol>
-										<li><a target=_blank href="https://nakashimmer.github.io/showcase/">HTML5 Showcase</a></li>
-									</ol>
 									<h2>うまく行かないとき</h2>
 									<ol>
-										<li><a target=_blank href="https://note.com/_nakashimmer_/n/ncb49a09c8211">作ったHTML5がうまく動作しない時どうするか？</a></li>
+										<li><a target=_blank
+												href="https://note.com/_nakashimmer_/n/ncb49a09c8211">作ったHTML5がうまく動作しない時どうするか？</a></li>
+										</li>
 										<li><a target=_blank href="https://validator.w3.org/">W3C HTML検証</a></li>
+										</li>
 										<li><a target=_blank href="https://jigsaw.w3.org/css-validator/validator.html.ja">W3C CSS検証</a></li>
+										</li>
 									</ol>
 									<h2>更に学びを深める</h2>
 									<ol>
 										<li><a href="https://www.amazon.co.jp/dp/4802096607/">📚なかしまぁ先生のHTML5教室 amazon</a></li>
 										</li>
+										</li>
 										<li><a target=_blank
 												href="https://www.street-academy.com/steachers/1274?conversion_name=direct_message&tracking_code=f3037c532c76e32eb5636350d0147bc9">一日まるごとどっぷりHTML5教室(リアル教室)</a>
+										</li>
 										</li>
 									</ol>
 								</section>
@@ -287,7 +292,7 @@
 			</div>
 		</div>
 		<footer>
-			<p><small>(C) <a>秋草学園大学</a>・<a href="https://www.facebook.com/NakashimaShunji/">中島俊治</a></small></p>
+			<p><small>(C) <a>秋草学園大学</a></li>・<a href="https://www.facebook.com/NakashimaShunji/">中島俊治</a></li></small></p>
 		</footer>
 	</body>
 </html>
