--- a/sample/1/2-4.html
+++ b/sample/1/2-4.html
@@ -21,14 +21,13 @@
 				/*行高*/
 			}
 
-			/*トランジション*/
 			#box1 {
-				transition: all 1s ease-in-out 0s;
-			}
-
-			#box1:hover {
-				width: 300px;
-				height: 300px;
+				font-size: 20px;
+				/*文字の大きさ*/
+				color: red;
+				/*文字の色*/
+				background-color: green;
+				/*背景色*/
 			}
 		</style>
 	</head>
