--- a/sample/2/2-4.html
+++ b/sample/2/2-4.html
@@ -27,8 +27,10 @@
 			}
 
 			#box1:hover {
-				width: 300px;
-				height: 300px;
+				box-shadow: 5px 5px 5px -1px gray;
+				/*箱の影*/
+				text-shadow: 2px 2px 2px gray;
+				/*テキストの影*/
 			}
 		</style>
 	</head>
