--- a/sample/3/3-3.html
+++ b/sample/3/3-3.html
@@ -56,11 +56,17 @@
 
 			@keyframes anime {
 				0% {
-					rotate: y 0deg;
+					rotate: y 40deg;
+					scale: 1.4 1 1;
+				}
+
+				50% {
+					scale: 1 1.4 1;
 				}
 
 				100% {
-					rotate: y 360deg;
+					rotate: y 40deg;
+					scale: 1.4 1 1;
 				}
 			}
 		</style>
