--- a/sample/2/1-1.html
+++ b/sample/2/1-1.html
@@ -23,12 +23,11 @@
 
 			/*トランジション*/
 			#box1 {
-				transition: all 1s ease-in-out 0s;
+				transition: color 1s ease-in-out 0s;
 			}
 
 			#box1:hover {
-				width: 300px;
-				height: 300px;
+				color: white;
 			}
 		</style>
 	</head>
