--- a/sample/2/1-2.html
+++ b/sample/2/1-2.html
@@ -27,8 +27,8 @@
 			}
 
 			#box1:hover {
-				width: 300px;
-				height: 300px;
+				color: white;
+				background-color: blue;
 			}
 		</style>
 	</head>
