--- a/sample/2/1-3.html
+++ b/sample/2/1-3.html
@@ -23,12 +23,14 @@
 
 			/*トランジション*/
 			#box1 {
-				transition: all 1s ease-in-out 0s;
+				transition:
+					color 5s ease-in-out 0s,
+					background-color 1s linear 0s;
 			}
 
 			#box1:hover {
-				width: 300px;
-				height: 300px;
+				color: white;
+				background-color: blue;
 			}
 		</style>
 	</head>
