--- a/sample/2/2-2.html
+++ b/sample/2/2-2.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8">
-		<title>2-2</title>
+		<title>CSSアニメーション</title>
 		<style>
-			p{color:red;}
+			div {
+				border: 1px solid gray;
+				/*枠線*/
+				width: 200px;
+				/*コンテンツ横幅*/
+				height: 200px;
+				/*コンテンツ高さ*/
+				margin: 200px auto;
+				/*外余白*/
+				padding: 0px;
+				/*内側余白*/
+				text-align: center;
+				/*文字の左右真中揃*/
+				line-height: 200px;
+				/*行高*/
+			}
+
+			/*トランジション*/
+			#box1 {
+				transition: font-size 1s ease-in-out 0s;
+			}
+
+			#box1:hover {
+				font-size: 50px;
+			}
 		</style>
 	</head>
-
 	<body>
-		<p>この文字を赤色にします。</p>
+		<div id="box1">Box1</div>
 	</body>
-
 </html>
