--- a/sample/2/2-3.html
+++ b/sample/2/2-3.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8">
-		<title>2-3</title>
+		<title>CSSアニメーション</title>
 		<style>
-			*{margin:0; padding:0;}
-			p{color:blue; border:1px solid gray;}
-			.css1{color:red;}
-			#id1{color:green;}
+			div {
+				border: 1px solid gray;
+				/*枠線*/
+				width: 200px;
+				/*コンテンツ横幅*/
+				height: 200px;
+				/*コンテンツ高さ*/
+				margin: 200px auto;
+				/*外余白*/
+				padding: 0px;
+				/*内側余白*/
+				text-align: center;
+				/*文字の左右真中揃*/
+				line-height: 200px;
+				/*行高*/
+			}
+
+			/*トランジション*/
+			#box1 {
+				transition: border-radius 1s ease-in-out 0s;
+			}
+
+			#box1:hover {
+				border-radius: 50px;
+			}
 		</style>
 	</head>
-
 	<body>
-		<p>段落は青くなります</p>
-		<p class="css1" id="id1">id指定しました</p>
-		<p class="css1">class指定しました</p>
+		<div id="box1">Box1</div>
 	</body>
-
 </html>
