--- a/sample/2/2-4-1.html
+++ b/sample/2/2-4-1.html
@@ -23,12 +23,19 @@
 
 			/*トランジション*/
 			#box1 {
-				transition: all 1s ease-in-out 0s;
+				transition: box-shadow 1s ease-in-out 0s;
 			}
 
 			#box1:hover {
-				width: 300px;
-				height: 300px;
+				box-shadow:
+					250px 0px 0px red,
+					/*1つめの影*/
+					-250px 0px 0px green,
+					/*2つめの影*/
+					0px 250px 0px blue,
+					/*3つめの影*/
+					0px -250px 0px yellow;
+				/*4つめの影*/
 			}
 		</style>
 	</head>
