--- a/sample/3/1.html
+++ b/sample/3/1.html
@@ -21,18 +21,29 @@
 				/*行高*/
 			}
 
-			/*トランジション*/
+			/*アニメーション*/
 			#box1 {
-				transition: all 1s ease-in-out 0s;
+				border: none;
+				animation: anime 3s ease-in-out 0s infinite normal both;
 			}
 
-			#box1:hover {
-				width: 300px;
-				height: 300px;
+			@keyframes anime {
+				0% {
+					color:
+						pink
+				}
+
+				50% {
+					color: skyblue;
+				}
+
+				100% {
+					color: pink;
+				}
 			}
 		</style>
 	</head>
 	<body>
-		<div id="box1">Box1</div>
+		<div id="box1">アニメーション</div>
 	</body>
 </html>
