--- a/sample/3/2-1.html
+++ b/sample/3/2-1.html
@@ -21,18 +21,35 @@
 				/*行高*/
 			}
 
-			/*トランジション*/
-			#box1 {
-				transition: all 1s ease-in-out 0s;
+			#parent {
+				position: relative;
+				margin: 50px auto;
+				width: 500px;
+				height: 400px;
+				overflow: hidden;
 			}
 
-			#box1:hover {
-				width: 300px;
-				height: 300px;
+			.center {
+				position: absolute;
+				top: 0px;
+				right: 0px;
+				bottom: 0px;
+				left: 0px;
+				margin: auto;
+			}
+
+			/*アニメーション*/
+			#child1 {
+				width: 200px;
+				height: 200px;
+				background-image: url(image.png);
+				background-size: 100% 100%;
 			}
 		</style>
 	</head>
 	<body>
-		<div id="box1">Box1</div>
+		<div id="parent">
+			<div id="child1" class="center"></div>
+		</div>
 	</body>
 </html>
