--- a/sample/3/2-5.html
+++ b/sample/3/2-5.html
@@ -39,28 +39,29 @@
 			}
 
 			/*アニメーション*/
-			#parent {
-				transform-style: preserve-3d;
-				/*3次元*/
-				perspective: 105px;
-				/*奥行き*/
-			}
-
 			#child1 {
 				width: 200px;
 				height: 200px;
 				background-image: url(image.png);
 				background-size: 100% 100%;
-				animation: anime 1s linear 0s infinite normal;
+				animation: anime 1s linear 0s infinite normal both;
 			}
 
 			@keyframes anime {
 				0% {
-					rotate: y 0deg;
+					translate: -200px;
+					rotate: 0deg;
+					opacity: 0;
+				}
+
+				50% {
+					opacity: 1;
 				}
 
 				100% {
-					rotate: y 360deg;
+					translate: 200px;
+					rotate: 360deg;
+					opacity: 0;
 				}
 			}
 		</style>
