--- a/sample/3/3-2.html
+++ b/sample/3/3-2.html
@@ -1,34 +1,83 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8">
-		<title>3-1</title>
+		<title>CSSアニメーション</title>
 		<style>
-			*{margin:0px;padding:0px;}				/*リセットCSS*/
-
-			div{
-				border:1px solid gray; 					/*枠線*/
-				width:200px;									/*コンテンツ横幅*/
-				height:200px; 								/*コンテンツ高さ*/
-				
-				position:absolute;
-				top:0px;right:0px;bottom:0px;left:0px;
-				margin:auto;
+			div {
+				border: 1px solid gray;
+				/*枠線*/
+				width: 200px;
+				/*コンテンツ横幅*/
+				height: 200px;
+				/*コンテンツ高さ*/
+				margin: 200px auto;
+				/*外余白*/
+				padding: 0px;
+				/*内側余白*/
+				text-align: center;
+				/*文字の左右真中揃*/
+				line-height: 200px;
+				/*行高*/
 			}
-			#box1{
-				background-color:green; 				/*背景色*/
 
-				font-size:30px;								/*文字の大きさ*/
-				color:red; 									/*文字の色*/
-				text-align:center; 						/*文字の左右真ん中揃え*/
-				line-height:200px; 						/*行高*/
+			#parent {
+				position: relative;
+				margin: 50px auto;
+				width: 500px;
+				height: 400px;
+				overflow: hidden;
+			}
+
+			.center {
+				position: absolute;
+				top: 0px;
+				right: 0px;
+				bottom: 0px;
+				left: 0px;
+				margin: auto;
+			}
+
+			/*アニメーション*/
+			#parent {
+				transform-style: preserve-3d;
+				/*3次元*/
+				perspective: 105px;
+				/*奥行き*/
+			}
+
+			#child1 {
+				width: 200px;
+				height: 200px;
+				background-image: url(image.png);
+				background-size: 100% 100%;
+				animation: anime 1s linear 0s infinite normal;
+			}
+
+			@keyframes anime {
+				0% {
+					translate: 200px 0px -100px;
+				}
+
+				25% {
+					translate: -200px 0px -100px;
+				}
+				50% {
+					translate: -200px 0px 0px;
+				}
+				75% {
+					translate: 200px 0px 0px;
+				}
+
+				100% {
+					translate: 200px 0px -100px;
+				}
 			}
 		</style>
 	</head>
-
 	<body>
-		<div id="box1">Box1</div>
+		<div id="parent">
+			<div id="child1" class="center"></div>
+		</div>
 	</body>
-
 </html>
