--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
 						<h1>演習環境</h1>
 						<section>
 							<ol class="no">
-								<li><a href="https://note.com/_nakashimmer_/n/n8a5563d15fea">Visual Studio Code</a></li>
+								<li><a target="_blank" href="https://note.com/_nakashimmer_/n/n8a5563d15fea">Visual Studio Code</a></li>
 								</li>
-								<li><a href="https://www.google.com/intl/ja_jp/chrome/">Google Chrome</a></li>
+								<li><a target="_blank" href="https://www.google.com/intl/ja_jp/chrome/">Google Chrome</a></li>
 								</li>
 							</ol>
 						</section>
@@ -151,7 +151,7 @@
 										<li><a target="_blank"
 												href="https://nakashimmer.github.io/showcase/css3/rich/index.html">リッチなCSS</a></li>
 										</li>
-										<li><a target="_blank" href="http://www.css-spinners.com/#/spinners/">スピナー</a></li>
+										<li><a target="_blank" href="https://epic-spinners.epicmax.co/">スピナー</a></li>
 										</li>
 										<li><a target="_blank"
 												href="https://lab.sonicmoov.com/markup/css/css-animation-20/">使えるCSSアニメーション20選</a></li>
@@ -186,7 +186,8 @@
 										<li><a target="_blank"
 												href="https://nakashimmer.github.io/showcase/JS/dom/css/index3.html">3Dコントロール</a></li>
 										</li>
-										<li><a href="https://webdesignfacts.net/entry/css-background-animation/#gsc.tab=0">動く背景</a></li>
+										<li><a target="_blank"
+												href="https://webdesignfacts.net/entry/css-background-animation/#gsc.tab=0">動く背景</a></li>
 										</li>
 									</ol>
 								</section>
@@ -195,10 +196,10 @@
 								<h1>1. 事前知識</h1>
 								<section>
 									<ol>
-										<li><a href="sample/1/2-1.html">2.1. HTMLの基本</a></li>
-										<li><a href="sample/1/2-2.html">2.2. CSSの基本</a></li>
-										<li><a href="sample/1/2-3.html">2.3. セレクタ</a></li>
-										<li><a href="sample/1/2-4.html">2.4. ボックスモデル</a></li>
+										<li><a target="_blank" href="sample/1/2-1.html">2.1. HTMLの基本</a></li>
+										<li><a target="_blank" href="sample/1/2-2.html">2.2. CSSの基本</a></li>
+										<li><a target="_blank" href="sample/1/2-3.html">2.3. セレクタ</a></li>
+										<li><a target="_blank" href="sample/1/2-4.html">2.4. ボックスモデル</a></li>
 									</ol>
 								</section>
 							</section>
@@ -206,24 +207,24 @@
 								<h1>2. トランジション</h1>
 								<section>
 									<ol>
-										<li><a href="sample/2/1-1.html">1.1. 文字の色をトランジションする</a></li>
-										<li><a href="sample/2/1-2.html">1.2. 複数のプロパティを同じ遷移時間でトランジションする</a></li>
-										<li><a href="sample/2/1-3.html">1.3. 複数のプロパティを別の遷移時間でトランジションする</a></li>
-										<li><a href="sample/2/2-1.html">2.1. 縦横</a></li>
-										<li><a href="sample/2/2-2.html">2.2. 文字の大きさ</a></li>
-										<li><a href="sample/2/2-3.html">2.3. 角丸</a></li>
-										<li><a href="sample/2/2-4.html">2.4. 影</a></li>
-										<li><a href="sample/2/2-5.html">2.5. 画像加工</a></li>
-										<li><a href="sample/2/2-5-1.html">2.5.1. 影</a></li>
-										<li><a href="sample/2/2-5-2.html">2.5.2. 明るさ</a></li>
-										<li><a href="sample/2/2-5-3.html">2.5.3. コントラスト</a></li>
-										<li><a href="sample/2/2-5-4.html">2.5.4. グレースケール</a></li>
-										<li><a href="sample/2/2-5-5.html">2.5.5. 彩度</a></li>
-										<li><a href="sample/2/2-5-6.html">2.5.6. セピア</a></li>
-										<li><a href="sample/2/2-5-7.html">2.5.7. 色相回転</a></li>
-										<li><a href="sample/2/2-5-8.html">2.5.8. 反転</a></li>
-										<li><a href="sample/2/2-5-9.html">2.5.9. ぼかし</a></li>
-										<li><a href="sample/2/2-5-10.html">2.5.10. 不透明度</a></li>
+										<li><a target="_blank" href="sample/2/1-1.html">1.1. 文字の色をトランジションする</a></li>
+										<li><a target="_blank" href="sample/2/1-2.html">1.2. 複数のプロパティを同じ遷移時間でトランジションする</a></li>
+										<li><a target="_blank" href="sample/2/1-3.html">1.3. 複数のプロパティを別の遷移時間でトランジションする</a></li>
+										<li><a target="_blank" href="sample/2/2-1.html">2.1. 縦横</a></li>
+										<li><a target="_blank" href="sample/2/2-2.html">2.2. 文字の大きさ</a></li>
+										<li><a target="_blank" href="sample/2/2-3.html">2.3. 角丸</a></li>
+										<li><a target="_blank" href="sample/2/2-4.html">2.4. 影</a></li>
+										<li><a target="_blank" href="sample/2/2-5.html">2.5. 画像加工</a></li>
+										<li><a target="_blank" href="sample/2/2-5-1.html">2.5.1. 影</a></li>
+										<li><a target="_blank" href="sample/2/2-5-2.html">2.5.2. 明るさ</a></li>
+										<li><a target="_blank" href="sample/2/2-5-3.html">2.5.3. コントラスト</a></li>
+										<li><a target="_blank" href="sample/2/2-5-4.html">2.5.4. グレースケール</a></li>
+										<li><a target="_blank" href="sample/2/2-5-5.html">2.5.5. 彩度</a></li>
+										<li><a target="_blank" href="sample/2/2-5-6.html">2.5.6. セピア</a></li>
+										<li><a target="_blank" href="sample/2/2-5-7.html">2.5.7. 色相回転</a></li>
+										<li><a target="_blank" href="sample/2/2-5-8.html">2.5.8. 反転</a></li>
+										<li><a target="_blank" href="sample/2/2-5-9.html">2.5.9. ぼかし</a></li>
+										<li><a target="_blank" href="sample/2/2-5-10.html">2.5.10. 不透明度</a></li>
 									</ol>
 								</section>
 							</section>
@@ -233,20 +234,20 @@
 								<h1>3. アニメーション</h1>
 								<section>
 									<ol>
-										<li><a href="sample/3/1.html">1 アニメーション</a></li>
-										<li><a href="sample/3/2-1.html">2.1 上下真ん中揃え</a></li>
-										<li><a href="sample/3/2-2.html">2.2 回転</a></li>
-										<li><a href="sample/3/2-3.html">2.3 移動</a></li>
-										<li><a href="sample/3/2-4.html">2.4 伸縮</a></li>
-										<li><a href="sample/3/2-5.html">2.5 複数の変形</a></li>
-										<li><a href="sample/3/2-6.html">2.6 複数の要素</a></li>
-										<li><a href="sample/3/2-7.html">2.7 複数のアニメーション</a></li>
-										<li><a href="sample/3/3.html">3 三次元</a></li>
-										<li><a href="sample/3/2-1.html">3.1 三次元の回転</a></li>
-										<li><a href="sample/3/3-1-rotate.html">3.1三次元の回転(複雑) </a></li>
-										<li><a href="sample/3/3-2.html">3.2 三次元の移動</a></li>
-										<li><a href="sample/3/3-3.html">3.3 三次元の伸縮</a></li>
-										<li><a href="sample/3/4-1.html">4.1 グラデーションの移動</a></li>
+										<li><a target="_blank" href="sample/3/1.html">1 アニメーション</a></li>
+										<li><a target="_blank" href="sample/3/2-1.html">2.1 上下真ん中揃え</a></li>
+										<li><a target="_blank" href="sample/3/2-2.html">2.2 回転</a></li>
+										<li><a target="_blank" href="sample/3/2-3.html">2.3 移動</a></li>
+										<li><a target="_blank" href="sample/3/2-4.html">2.4 伸縮</a></li>
+										<li><a target="_blank" href="sample/3/2-5.html">2.5 複数の変形</a></li>
+										<li><a target="_blank" href="sample/3/2-6.html">2.6 複数の要素</a></li>
+										<li><a target="_blank" href="sample/3/2-7.html">2.7 複数のアニメーション</a></li>
+										<li><a target="_blank" href="sample/3/3.html">3 三次元</a></li>
+										<li><a target="_blank" href="sample/3/3-1.html">3.1 三次元の回転</a></li>
+										<li><a target="_blank" href="sample/3/3-1-rotate.html">3.1三次元の回転(複雑) </a></li>
+										<li><a target="_blank" href="sample/3/3-2.html">3.2 三次元の移動</a></li>
+										<li><a target="_blank" href="sample/3/3-3.html">3.3 三次元の伸縮</a></li>
+										<li><a target="_blank" href="sample/3/4-1.html">4.1 グラデーションの移動</a></li>
 									</ol>
 								</section>
 							</section>
@@ -254,10 +255,10 @@
 								<h1>4. JavaScript連携</h1>
 								<section>
 									<ol>
-										<li><a href="sample/4/1-2.html">1.2. 準備コード</a></li>
-										<li><a href="sample/4/1-3.html">1.3. CSSの操作</a></li>
-										<li><a href="sample/4/1-4.html">1.4. ハイフンを含んだCSSの操作</a></li>
-										<li><a href="sample/4/1-5.html">1.5. 変形のCSSの操作</a></li>
+										<li><a target="_blank" href="sample/4/1-2.html">1.2. 準備コード</a></li>
+										<li><a target="_blank" href="sample/4/1-3.html">1.3. CSSの操作</a></li>
+										<li><a target="_blank" href="sample/4/1-4.html">1.4. ハイフンを含んだCSSの操作</a></li>
+										<li><a target="_blank" href="sample/4/1-5.html">1.5. 変形のCSSの操作</a></li>
 									</ol>
 								</section>
 							</section>
@@ -276,7 +277,8 @@
 									</ol>
 									<h2>更に学びを深める</h2>
 									<ol>
-										<li><a href="https://www.amazon.co.jp/dp/4802096607/">📚なかしまぁ先生のHTML5教室 amazon</a></li>
+										<li><a target="_blank" href="https://www.amazon.co.jp/dp/4802096607/">📚なかしまぁ先生のHTML5教室 amazon</a>
+										</li>
 										</li>
 										</li>
 										<li><a target=_blank
@@ -292,7 +294,8 @@
 			</div>
 		</div>
 		<footer>
-			<p><small>(C) <a>秋草学園大学</a></li>・<a href="https://www.facebook.com/NakashimaShunji/">中島俊治</a></li></small></p>
+			<p><small>(C) <a>秋草学園大学</a></li>・<a target="_blank" href="https://www.facebook.com/NakashimaShunji/">中島俊治</a></li>
+					</small></p>
 		</footer>
 	</body>
 </html>
